see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

07-Apr-2010 Louis Landry
^ Change the new protocol request var for various controller types to format ... for consistency.

06-Apr-2010 Jean-Marie Simonet
$ Adding missing value to key.
#$ Fixing some com_categories strings + bug (thanks Dennis)
# Bugs in com_redirect

05-Apr-2010 Jean-Marie Simonet
$^+ Consolidating some keys with same value to a unique key in main inis. WIP
# Fixed [19972]

05-Apr-2010 Andrew Eddie
 # Fix bug in JCache constructor.

04-Apr-2010 Jean-Marie Simonet
$^+ Consolidating some keys with same value to a unique key in main inis. WIP
#$ Missing string + bug [20098]. Thank you Klas.

02-Apr-2010 Louis Landry
^ [#19982] JTable Improvements thanks to Jonnathan S. Lima!

02-Apr-2010 Jean-Marie Simonet
$ Refactoring com_redirect ini/keys

01-Apr-2010 Mark Dexter
# Fix bug processing content plugin in single-article

01-Apr-2010 Christophe Demko
# Fix bug #19744 of the tracker
# Fix bug #20072 of the tracker
# Correctly loading the language file on plugin uninstalling

01-Apr-2010 Jean-Marie Simonet
^$ Creating JSITE and JADMINISTRATOR keys in main ini file. Globally consolidated all keys with same value to these new keys.
- Removed xmlrpc library + some 

31-Mar-2010 Mark Dexter
^ Implement parameters in Archived Articles menu item
# Minor language file fixes
# Bug fixes in content layout files (Angie Radtke)
^ Add CSS classes to pagination (Angie Radtke)
# Misc. module layout fixes (Angie Radtke)

31-Mar-2010 Jean-Marie Simonet
$ Refactored com_installer ini/keys

30-Mar-2010 Mark Dexter
# Fix PHP undefined var notice in New Menu Item 

30-Mar-2010 Sam Moffat