@@ -14,6 +14,7 @@ COM_MEDIA_ERROR_FILE_EXISTS="File already exists"
 COM_MEDIA_UPLOAD_COMPLETE="Upload Complete"
 COM_MEDIA_ERROR_UNABLE_TO_DELETE=" Unable to delete:&nbsp;"
 COM_MEDIA_ERROR_WARNNOTEMPTY="Not empty!"
+COM_MEDIA_ERROR_UNABLE_TO_CREATE_FOLDER_WARNDIRNAME="Unable to create directory. Directory name must only contain alphanumeric characters and no spaces."
 COM_MEDIA_ERROR_UNABLE_TO_DELETE_FOLDER_WARNDIRNAME="Unable to delete:&nbsp;%s. Directory name must only contain alphanumeric characters and no spaces."
 COM_MEDIA_ERROR_UNABLE_TO_DELETE_FILE_WARNFILENAME="Unable to delete:&nbsp;%s. File name must only contain alphanumeric characters and no spaces."
 COM_MEDIA_ERROR_UNABLE_TO_DELETE_FOLDER_NOT_EMPTY="Unable to delete:&nbsp;%s. Folder is not empty!"
@@ -53,10 +54,30 @@ COM_MEDIA_OVERALL_PROGRESS="Overall Progress"
 COM_MEDIA_CURRENT_PROGRESS="Current progress"
 COM_MEDIA_CLEAR_LIST="Clear List"
 COM_MEDIA_UPLOAD_FILES="Upload files"
+COM_MEDIA_UPLOAD_FILE="Upload file"
 COM_MEDIA_FILESIZE="File size"
 COM_MEDIA_PIXEL_DIMENSIONS="Pixel Dimensions (W x H)"
 COM_MEDIA_NAME="Image Name"
 COM_MEDIA_FOLDER="Folder"
+
+; Uploader keys
+COM_MEDIA_UPLOADER_UPLOAD_COMPLETED="Upload completed"
+COM_MEDIA_UPLOADER_OVERALL_PROGRESS_TOTAL="Overall Progress ({total})'"
+COM_MEDIA_UPLOADER_FILE_PROGRESS="File Progress"
+COM_MEDIA_UPLOADER_UPLOADING="Uploading '{name}'"
+COM_MEDIA_UPLOADER_CURRENT_PROGRESS="Upload: {bytesLoaded} with {rate}, {timeRemaining} remaining."
+COM_MEDIA_UPLOADER_FILENAME="{name}"
+COM_MEDIA_UPLOADER_REMOVE="Remove"
+COM_MEDIA_UPLOADER_REMOVE_TITLE="Click to remove this entry."
+COM_MEDIA_UPLOADER_FILE_ERROR="Upload failed"
+COM_MEDIA_UPLOADER_ERROR_DUPLICATE="File <em>{name}</em> is already added, duplicates are not allowed."
+COM_MEDIA_UPLOADER_ERROR_SIZE_LIMIT_MIN="File <em>{name}</em> (<em>{size}</em>) is too small, the minimal file size is {fileSizeMin}."
+COM_MEDIA_UPLOADER_ERROR_SIZE_LIMIT_MAX="File <em>{name}</em> (<em>{size}</em>) is too big, the maximal file size is <em>{fileSizeMax}</em>."
+COM_MEDIA_UPLOADER_ERROR_FILELIST_MAX="File <em>{name}</em> could not be added, amount of <em>{fileListMax} files</em> exceeded."
+COM_MEDIA_UPLOADER_ERROR_FILELIST_SIZE_MAX="File <em>{name}</em> (<em>{size}</em>) is too big, overall filesize of <em>{fileListSizeMax}</em> exceeded."
+COM_MEDIA_UPLOADER_ERROR_HTTP_STATUS="Server returned HTTP-Status <code>#{code}</code>"
+COM_MEDIA_UPLOADER_ERROR_SECURITY="Security error occured ({text})"
+COM_MEDIA_UPLOADER_ERROR_IO="Error caused a send or load operation to fail ({text})"
 
 COM_MEDIA_FIELD_LEGAL_EXTENSIONS_LABEL="Legal Extensions (File Types)"
 COM_MEDIA_FIELD_LEGAL_EXTENSIONS_DESC=" Extensions (file types) you are allowed to upload (comma separated)."
