@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+07-Apr-2010 Jean-Marie Simonet
+#$ Fixing fancy uploader hardcoded strings and more, WIP (thanks Dennis)
+
 07-Apr-2010 Louis Landry
 ^ Change the new protocol request var for various controller types to format ... for consistency.
 
